--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   background-color: var(--background-color);
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 .page-container {
   margin: auto;
